--- a/OutfitProject/Views/Accessories/Details.cshtml
+++ b/OutfitProject/Views/Accessories/Details.cshtml
@@ -3,64 +3,39 @@
 @{
     ViewBag.Title = "Details";
 }
-
-<h2>Details</h2>
-
+<hr />
 <div>
-    <h4>Accessory</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.AccessoryName)
-        </dt>
+    <div class="panel panelForm">
+        <div class="container-fluid">
+            <div class="row">
 
-        <dd>
-            @Html.DisplayFor(model => model.AccessoryName)
-        </dd>
+                @*  Details Section  *@
+                <div class="col-md-6 detailText">
+                    <h2>@Html.DisplayFor(model => model.AccessoryName)</h2>
+                    <h4>
+                        @Html.DisplayFor(model => model.AccessoryColor)
+                        @Html.DisplayFor(model => model.AccessoryType)
+                    </h4>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.AccessoryPhoto)
-        </dt>
+                    <p>
+                        Season: @Html.DisplayFor(model => model.AccessorySeason) <br />
+                        Occasion: @Html.DisplayFor(model => model.AccessoryOccasion)
+                    </p>
+                    <p>
+                        @Html.ActionLink("Edit", "Edit", new { id = Model.AccessoryID }, new { role = "button", @class = "greyButton" })
+                        @Html.ActionLink("Back to List", "Index", new { id = Model.AccessoryID }, new { role = "button", @class = "greyButton" })
+                        @Html.ActionLink("Delete", "Delete", new { id = Model.AccessoryID }, new { role = "button", @class = "greyButton" })
+                    </p>
+                </div>
 
-        <dd>
-            <img src="@Html.DisplayFor(model => model.AccessoryPhoto)"/>"
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AccessoryType)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AccessoryType)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AccessoryColor)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AccessoryColor)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AccessorySeason)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AccessorySeason)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AccessoryOccasion)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AccessoryOccasion)
-        </dd>
-
-    </dl>
+                @*  Images Section  *@
+                <div class="col-md-6 detailImg">
+                    <img src="@Html.DisplayFor(model => model.AccessoryPhoto)" />
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.AccessoryID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
+
+       
