--- a/OutfitProject/Views/Accessories/Index.cshtml
+++ b/OutfitProject/Views/Accessories/Index.cshtml
@@ -3,61 +3,35 @@
 @{
     ViewBag.Title = "Index";
 }
-
-<h2>Index</h2>
+<hr />
+<h2>Accessories</h2>
+<p>Current number of accessories: @ViewBag.AccessTotal</p>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Would you like to add another Accessory?", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.AccessoryName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AccessoryPhoto)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AccessoryType)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AccessoryColor)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AccessorySeason)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AccessoryOccasion)
-        </th>
-        <th></th>
-    </tr>
+<div class="jumbotron">
+    <div class="container-fluid">
+        <div class="row">
+            @foreach (var item in Model)
+            {
+                <div class="col-md-3">
+                    <h4>@Html.DisplayFor(modelItem => item.AccessoryName)</h4>
+                    <div class="thumbnail thumbBorder">
+                        <a href="@Url.Action( "Details","Accessories",new { id=item.AccessoryID } )">
+                            <img class="indexForm" src="@Html.DisplayFor(modelItem => item.AccessoryPhoto)">
+                        </a>
+                    </div>
+                </div>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.AccessoryName)
-        </td>
-        <td>            
-            <img src="@Html.DisplayFor(modelItem => item.AccessoryPhoto)"/>
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AccessoryType)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AccessoryColor)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AccessorySeason)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AccessoryOccasion)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.AccessoryID }) |
+            }
+
+        </div>
+    </div>
+</div>
+
+
+            @*@Html.ActionLink("Edit", "Edit", new { id=item.AccessoryID }) |
             @Html.ActionLink("Details", "Details", new { id=item.AccessoryID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.AccessoryID })
-        </td>
-    </tr>
-}
-
-</table>
+            @Html.ActionLink("Delete", "Delete", new { id=item.AccessoryID })*@
+ 
