--- a/OutfitProject/Content/Site.css
+++ b/OutfitProject/Content/Site.css
@@ -1,17 +1,19 @@
 ﻿body {
     padding-top: 0px;
     padding-bottom: 20px;
-    background-color:rgb(190, 183, 229);
-    
-
+    background-color: rgb(190, 183, 229);
+    font-family: 'Dosis', sans-serif;
     /*background-image: url('../Images/closetBG.jpg');*/
+}
+
+h1, h2, h3, h4 {
+    font-family: 'Dosis', sans-serif;
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
-   
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -28,36 +30,45 @@ textarea {
     max-width: 280px;
 }
 
-.jumboFormat{
+.jumboFormat {
     background-color: rgba(255, 255, 255, 0.5);
+    padding:10px;
 }
 
-.lowerBody{
-     
+.jumbo2{
+    padding-top:5px;
+}
+
+.lowerBody {
+    margin-top:0;
+    padding-top:0;
 }
 
 /*  New Header  */
-.newHeader{
-    display:block;
-    margin-left:13%;
-    margin-top:10px;
-    
+.newHeader {
+    display: block;
+    margin-left: 13%;
+    margin-top: 10px;
 }
 
-.fancyFont{
+.fancyFont {
     font-family: 'Dancing Script', cursive;
-    float:right;
-    font-size:40px;
+    float: right;
+    font-size: 40px;
 }
 
 
 /*  Nav Bar  */
 .blackText {
-    color:black;
+    color: black;
 }
 
-.blackText a{
-    color:black;
+.blackText a {
+    color: black;
+}
+
+.navFormat{
+    margin-bottom:0px;
 }
 
 button.navbar-toggle {
@@ -68,30 +79,80 @@ span.glyphicon {
     color: black;
 }
 
-.table img{
-    width:100px;
-}
-
-/*  Left Stuff  */
-.leftStuff{
-    position:absolute;
-    left:10%;
+.thumbnail img {
+    max-height: 200px;
 }
 
 /* Carousel Section*/
-.carousel-indicators li{   
-    border: 1px solid rgb(71,78,93);    
+.carousel-indicators li {
+    border: 1px solid rgb(71,78,93);
 }
 
-.carousel-indicators .active{
+.carousel-indicators .active {
     background-color: rgb(71,78,93);
-    border: 2px solid rgb(71,78,93);    
+    border: 2px solid rgb(71,78,93);
 }
 
-.carousel-inner{
-    padding-bottom:70px;      
+.carousel-inner {
+    padding-bottom: 70px;
+  
 }
 
-.item2 {
+.carouselImage{
     text-align:center;
+    width:100%;
+      
+}
+
+.centerText{
+    text-align:center;
+    
+}
+
+.centerText img{
+    height100%;
+    
+}
+/*  Main index  */
+.newHeader img{
+    width:auto;
+}
+
+
+
+
+/*  Details  */
+.detailImg img{
+    height:300px;
+    max-width:100%;
+    padding-bottom:40px;
+    padding-top:40px;
+ 
+}
+
+.detailText {
+    padding-left:30px;
+}
+
+.greyButton{
+    background-color:grey;
+    padding:5px;
+    border-radius:2px;
+    color:white;
+}
+
+.greyButton:hover{
+    background-color:lightgrey;
+    color:black;
+    text-decoration:none;
+}
+
+/*  Index Formatting  */
+.indexForm {
+    width: 200px;
+}
+    
+ .thumbBorder{   
+    border: solid 1px rgb(71,78,93);
+
 }
