--- a/OutfitProject/Views/Outfits/Details.cshtml
+++ b/OutfitProject/Views/Outfits/Details.cshtml
@@ -3,46 +3,121 @@
 @{
     ViewBag.Title = "Details";
 }
-
+<hr />
 <h2>Details</h2>
 
 <div>
     <h4>Outfit</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Accessory.AccessoryName)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Accessory.AccessoryName)
-        </dd>
+    @*Top Details*@
+    <div class="panel panelForm">
+        <div class="container-fluid">
+            <div class="row">
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Bottom.BottomName)
-        </dt>
+                @*  Details Section  *@
+                <div class="col-md-6 detailText">
+                    <h2>@Html.DisplayFor(model => model.Top.TopName)</h2>
+                    <h4>
+                        @Html.DisplayFor(model => model.Top.TopColor)
+                        @Html.DisplayFor(model => model.Top.TopType)
+                    </h4>
 
-        <dd>
-            @Html.DisplayFor(model => model.Bottom.BottomName)
-        </dd>
+                    <p>
+                        Season: @Html.DisplayFor(model => model.Top.TopSeason) <br />
+                        Occasion: @Html.DisplayFor(model => model.Top.TopOccasion)
+                    </p>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Sho.ShoeName)
-        </dt>
+                </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Sho.ShoeName)
-        </dd>
+                @*  Image Section  *@
+                <div class="col-md-6 detailImg">
+                    <img src="@Html.DisplayFor(model => model.Top.TopPhoto)" />
+                </div>
+            </div>
+        </div>
+    </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Top.TopName)
-        </dt>
+    @*Bottom Details*@
+    <div class="panel panelForm">
+        <div class="container-fluid">
+            <div class="row">
 
-        <dd>
-            @Html.DisplayFor(model => model.Top.TopName)
-        </dd>
+                @*  Details Section  *@
+                <div class="col-md-6 detailText">
+                    <h2>@Html.DisplayFor(model => model.Bottom.BottomName)</h2>
+                    <h4>
+                        @Html.DisplayFor(model => model.Bottom.BottomColor)
+                        @Html.DisplayFor(model => model.Bottom.BottomType)
+                    </h4>
 
-    </dl>
+                    <p>
+                        Season: @Html.DisplayFor(model => model.Bottom.BottomSeason) <br />
+                        Occasion: @Html.DisplayFor(model => model.Bottom.BottomOccasion)
+                    </p>
+                </div>
+
+                @*  Image Section  *@
+                <div class="col-md-6 detailImg">
+                    <img src="@Html.DisplayFor(model => model.Bottom.BottomPhoto)" />
+                </div>
+            </div>
+        </div>
+    </div>
+
+    @*Shoes Details*@
+    <div class="panel panelForm">
+        <div class="container-fluid">
+            <div class="row">
+
+                @*  Details Section  *@
+                <div class="col-md-6 detailText">
+                    <h2>@Html.DisplayFor(model => model.Sho.ShoeName)</h2>
+                    <h4>
+                        @Html.DisplayFor(model => model.Sho.ShoeColor)
+                        @Html.DisplayFor(model => model.Sho.ShoeType)
+                    </h4>
+
+                    <p>
+                        Season: @Html.DisplayFor(model => model.Sho.ShoeSeason) <br />
+                        Occasion: @Html.DisplayFor(model => model.Sho.ShoeOccasion)
+                    </p>
+                </div>
+
+                @*  Images Section  *@
+                <div class="col-md-6 detailImg">
+                    <img src="@Html.DisplayFor(model => model.Sho.ShoePhoto)" />
+                </div>
+            </div>
+        </div>
+    </div>
+
+    @*Accessoryies Details*@
+    <div class="panel panelForm">
+        <div class="container-fluid">
+            <div class="row">
+
+                @*  Details Section  *@
+                <div class="col-md-6 detailText">
+                    <h2>@Html.DisplayFor(model => model.Accessory.AccessoryName)</h2>
+                    <h4>
+                        @Html.DisplayFor(model => model.Accessory.AccessoryColor)
+                        @Html.DisplayFor(model => model.Accessory.AccessoryType)
+                    </h4>
+
+                    <p>
+                        Season: @Html.DisplayFor(model => model.Accessory.AccessorySeason) <br />
+                        Occasion: @Html.DisplayFor(model => model.Accessory.AccessoryOccasion)
+                    </p>
+                </div>
+
+                @*  Images Section  *@
+                <div class="col-md-6 detailImg">
+                    <img src="@Html.DisplayFor(model => model.Accessory.AccessoryPhoto)" />
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.OutfitID }) |
