--- a/OutfitProject/Views/Outfits/Index.cshtml
+++ b/OutfitProject/Views/Outfits/Index.cshtml
@@ -3,49 +3,59 @@
 @{
     ViewBag.Title = "Index";
 }
-
-<h2>Index</h2>
+<hr />
+<h2>Outfits</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Would you like to create an Outfit?", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Accessory.AccessoryName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Bottom.BottomName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Sho.ShoeName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Top.TopName)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Accessory.AccessoryName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Bottom.BottomName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Sho.ShoeName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Top.TopName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.OutfitID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.OutfitID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.OutfitID })
-        </td>
-    </tr>
+@foreach (var item in Model)
+{
+    <div class="jumbotron">
+        <h2>Outfit Number:  </h2>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-3">
+                    <h4>@Html.DisplayFor(modelItem => item.Top.TopName)</h4>
+                    <div class="thumbnail ">                        
+                        <img src="@Html.DisplayFor(modelItem => item.Top.TopPhoto)" />
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <h4>@Html.DisplayFor(modelItem => item.Bottom.BottomName)</h4>
+                    <div class="thumbnail">                     
+                        <img src="@Html.DisplayFor(modelItem => item.Bottom.BottomPhoto)" />
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <h4>@Html.DisplayFor(modelItem => item.Sho.ShoeName)</h4>
+                    <div class="thumbnail">                       
+                        <img src="@Html.DisplayFor(modelItem => item.Sho.ShoePhoto)" />
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <h4>@Html.DisplayFor(modelItem => item.Accessory.AccessoryName)</h4>
+                    <div class="thumbnail">                        
+                        <img src="@Html.DisplayFor(modelItem => item.Accessory.AccessoryPhoto)" />
+                    </div>
+                </div>
+
+            </div>
+
+            @Html.ActionLink("Edit", "Edit", new { id = item.OutfitID }, new { role = "button", @class = "greyButton" }) 
+            @Html.ActionLink("Details", "Details", new { id = item.OutfitID }, new { role = "button", @class = "greyButton" }) 
+            @Html.ActionLink("Delete", "Delete", new { id = item.OutfitID }, new { role = "button", @class = "greyButton" })
+        </div>
+    </div>
+      
 }
 
-</table>
+
+
+
+
+
