--- a/OutfitProject/Views/Shared/_Layout.cshtml
+++ b/OutfitProject/Views/Shared/_Layout.cshtml
@@ -4,11 +4,21 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Virtual Closet</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet"> 
 </head>
 <body>
+
 
     <div class="container-fluid">
         <div class="row newHeader">
@@ -26,7 +36,7 @@
                     <span class="glyphicon glyphicon-minus blackText"></span>
                 </button>
 
-                @Html.ActionLink("My Virtual Closet", "Index", "Home", new { area = "" }, new { @class = "navbar-brand blackText" })
+                @Html.ActionLink("Virtual Closet Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand blackText" })
 
             </div>
             <div class="navbar-collapse collapse">
