--- a/OutfitProject/Views/Shoes/Details.cshtml
+++ b/OutfitProject/Views/Shoes/Details.cshtml
@@ -3,64 +3,39 @@
 @{
     ViewBag.Title = "Details";
 }
-
-<h2>Details</h2>
+<hr />
 
 <div>
-    <h4>Sho</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.ShoeName)
-        </dt>
+    <h4>Shoes</h4>
+    <div class="panel panelForm">
+        <div class="container-fluid">
+            <div class="row">
 
-        <dd>
-            @Html.DisplayFor(model => model.ShoeName)
-        </dd>
+                @*  Details Section  *@
+                <div class="col-md-6 detailText">
+                    <h2>@Html.DisplayFor(model => model.ShoeName)</h2>
+                    <h4>
+                        @Html.DisplayFor(model => model.ShoeColor)
+                        @Html.DisplayFor(model => model.ShoeType)
+                    </h4>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ShoePhoto)
-        </dt>
+                    <p>
+                        Season: @Html.DisplayFor(model => model.ShoeSeason) <br />
+                        Occasion: @Html.DisplayFor(model => model.ShoeOccasion)
+                    </p>
+                    <p>
+                        @Html.ActionLink("Edit", "Edit", new { id = Model.ShoeID }, new { role = "button", @class = "greyButton" })
+                        @Html.ActionLink("Back to List", "Index", new { id = Model.ShoeID },  new { role = "button", @class = "greyButton" })
+                        @Html.ActionLink("Delete", "Delete", new { id = Model.ShoeID }, new { role = "button", @class = "greyButton" })
+                    </p>
+                </div>
 
-        <dd>
-            <img src="@Html.DisplayFor(model => model.ShoePhoto)"/>
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ShoeType)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ShoeType)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ShoeColor)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ShoeColor)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ShoeSeason)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ShoeSeason)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ShoeOccasion)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ShoeOccasion)
-        </dd>
-
-    </dl>
+                @*  Images Section  *@
+                <div class="col-md-6 detailImg">
+                    <img src="@Html.DisplayFor(model => model.ShoePhoto)" />
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ShoeID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
