Last up, seriously

--- a/OutfitProject/Views/Accessories/Index.cshtml
+++ b/OutfitProject/Views/Accessories/Index.cshtml
@@ -5,7 +5,7 @@
 }
 <hr />
 <h2>Accessories</h2>
-<p>Current number of accessories: @ViewBag.AccessTotal</p>
+<p>Current number of Accessories: @ViewBag.AccessTotal</p>
 
 <p>
     @Html.ActionLink("Would you like to add another Accessory?", "Create")
