--- a/OutfitProject/Views/Bottoms/Index.cshtml
+++ b/OutfitProject/Views/Bottoms/Index.cshtml
@@ -6,6 +6,7 @@
 <hr />
 <h2>Bottoms</h2>
 
+<p>Current number of Bottoms: @ViewBag.BottomTotal</p>
 <p>
     @Html.ActionLink("Would you like to add another Bottom?", "Create")
 </p>
