--- a/OutfitProject/Views/Tops/Index.cshtml
+++ b/OutfitProject/Views/Tops/Index.cshtml
@@ -6,6 +6,8 @@
 <hr />
 <h2>Tops</h2>
 
+<p>Current number of Tops: @ViewBag.TopsTotal</p>
+
 <p>
     @Html.ActionLink("Would you like to add another Top?", "Create")
 </p>
